--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,15 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
+    <string-array name="overrideLighting">
+        <item>Off</item>
+        <item>Auto</item>
+        <item>On</item>
+    </string-array>
+    <string-array name="overrideWatering">
+        <item>Stop</item>
+        <item>Auto</item>
+        <item>Start</item>
+    </string-array>
 
 </resources>
