--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,10 @@
     <string name="title_section1">Overview</string>
     <string name="title_section2">Temperature</string>
     <string name="title_section3">Humidity</string>
-    <string name="title_section4">Water Level</string>
+    <string name="title_section4">Water/Feeding</string>
     <string name="title_section5">Lighting</string>
-    <string name="title_section6">Scheduling</string>
-    <string name="title_section7">Notifications</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string-array name="overrideLighting">
         <item>Off</item>
